@@ -69,8 +69,8 @@ public:
     virtual void registerCommandForRedo(WTF::PassRefPtr<WebCore::EditCommand>);
     virtual void clearUndoRedoOperations();
 
-    virtual bool canCopyCut(bool defaultValue) const;
-    virtual bool canPaste(bool defaultValue) const;
+    virtual bool canCopyCut(WebCore::Frame*, bool defaultValue) const;
+    virtual bool canPaste(WebCore::Frame*, bool defaultValue) const;
     virtual bool canUndo() const;
     virtual bool canRedo() const;
 
